syntax = "proto3";

option go_package = "github.com/berkeli/raft-otel/service/store"; 

package store;

message GetRequest {

  string key = 1;

}

message GetResponse {

  bytes value = 1;

}

message PutRequest {

  string key = 1;

  bytes value = 2;

}

message PutResponse {

  bool ok = 1;

}

message CompareAndSetRequest {
    
      string key = 1;
    
      bytes value = 2;
    
      bytes prev_value = 3;
    
}

message CompareAndSetResponse {
    
      bool ok = 1;
    
}

message NotLeaderResponse {
  
    string leaderAddr = 1;

    int64 leaderId = 2;

}

service Store {

  rpc Get(GetRequest) returns (GetResponse);

  rpc Put(PutRequest) returns (PutResponse);
  
  rpc CompareAndSet(CompareAndSetRequest) returns (CompareAndSetResponse);

}

